force-app/main/default/objects/FieloEE__Branch__c/fields/FieloEE__Account__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>