force-app/main/default/objects/FieloEE__Branch__c/fields/FieloEE__City__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__City__c</fullName>
    <description>City where the branch is located.</description>
    <inlineHelpText>Enter the city where your branch is located.</inlineHelpText>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>