force-app/main/default/objects/FieloEE__Branch__c/fields/FieloEE__Code__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Code__c</fullName>
    <description>The branch code. It can be filled with a branch number or just enter a name for each branch.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter a code that will uniquely identify this branch.</inlineHelpText>
    <label>Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>