force-app/main/default/objects/FieloEE__Branch__c/fields/FieloEE__Latitude__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Latitude__c</fullName>
    <description>The latitude coordinates of this branch. This field will autocomplete after you enter your branch address.</description>
    <inlineHelpText>This field will autocomplete after you enter your branch address.</inlineHelpText>
    <label>Latitude</label>
    <precision>15</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>