force-app/main/default/objects/FieloEE__Branch__c/fields/FieloEE__Owner__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>