force-app/main/default/objects/FieloEE__Branch__c/fields/FieloEE__State__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__State__c</fullName>
    <description>State where the branch is located.</description>
    <inlineHelpText>Enter the state or province where your branch is located.</inlineHelpText>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>