force-app/main/default/objects/FieloEE__Branch__c/listViews/FieloEE__All.listView-meta.xml
<ListView>
    <fullName>FieloEE__All</fullName>
    <columns>FieloEE__Code__c</columns>
    <columns>NAME</columns>
    <columns>FieloEE__Street__c</columns>
    <columns>FieloEE__City__c</columns>
    <columns>FieloEE__State__c</columns>
    <columns>FieloEE__Country__c</columns>
    <columns>FieloEE__Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>