force-app/main/default/objects/FieloEE__Branch__c/listViews/FieloEE__All_Branches.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Branches</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Branches</label>
    <language>en_US</language>
</ListView>